--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
-    "react-simple-chatbot": "^0.6.1"
+    "react-simple-chatbot": "^0.6.1",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
