--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,12 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "cors": "^2.8.5",
+    "formik": "^2.2.9",
     "framer-motion": "^10.12.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "react-simple-chatbot": "^0.6.1",
