--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "otp-generator": "^4.0.1"
   }
 }
